--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.1",
+    "file-loader": "^0.11.1",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.17.0",
     "systemjs": "^0.20.12",
     "ts-loader": "^2.0.3",
     "typescript": "^2.3.2",
+    "url-loader": "^0.5.8",
     "webpack": "^2.5.1"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "jquery": "^3.2.1"
   }
 }
