--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.1",
+    "lite-server": "^2.3.0",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
